<resources>
    <string name="app_name">ElectroApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="password_hint">Password</string>
    <string name="do_not_have_acc">Do not have an account? \nGo to Sign Up!</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_signin">Already have an account?\nGo to Sign In!</string>
    <string name="username_hint">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="name_of_product">Name of product</string>
    <string name="price">Price</string>
    <string name="currency">$</string>
    <string name="post">Post</string>
    <string name="write_short_description_for_your_product">Write short description for your product</string>
    <string name="category">Category:</string>
    <string name="city">City</string>
    <string name="characteristics">Characteristics:</string>
    <string name="seller_name">Seller`s name</string>
    <string name="seller_ads">Seller`s ads</string>
    <string name="product_name">Product name</string>
    <string name="sign_out">Sign out</string>
    <string name="follow_seller">Follow seller</string>
    <string name="your_subscriptions">Your subscriptions</string>
    <string name="your_favourites">Your favourites</string>
    <string name="search">Search</string>
</resources>