<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tv_phone_number"
        app:layout_constraintTop_toTopOf="parent">


            <!-- Ваши элементы внутри ScrollView -->
            <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/spinner_background" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.example.electroapp.data.util.ClickableViewPager
                        android:id="@+id/photos_viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:overScrollMode="never"
                        android:layout_margin="5dp" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/photos_tabLayout"
                        android:layout_width="match_parent"
                        app:tabBackground="@drawable/tab_selector"
                        app:tabGravity="center"
                        app:tabIndicatorHeight="0dp"
                        app:tabMaxWidth="10dp"
                        android:layout_height="15dp"
                        android:layout_margin="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:tabIndicator="@null"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/product_name"
                android:textSize="28sp"
                app:layout_constraintTop_toBottomOf="@+id/fl_image" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/price"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="$"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_price"
                app:layout_constraintStart_toEndOf="@+id/tv_price"
                app:layout_constraintTop_toTopOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />


            <TextView
                android:id="@+id/tv_characteristics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/characteristics"
                android:textColor="@color/grey"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/rv_filters"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_characteristics"
                tools:layout_editor_absoluteX="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@id/rv_filters">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/shape_circle_black_stroke"
                    android:padding="2dp"
                    android:src="@drawable/user" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/seller_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seller_name"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/seller_ads"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/spinner_background"
                        android:padding="6dp"
                        android:text="@string/seller_ads"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkGrey"
        android:gravity="center"
        android:text="Phone number"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



